
-BUG FIX: Miscellaneous fixes

-Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Currency Support, Power User, Access Stats

-Converted the old ETH ICOs config to a generalized presale tokens config, and moved to the new admin section CURRENCY SUPPORT

-Moved ENTIRE mining page config into dynamic-config.php (except for HIVE power down settings)

-Moved the user area 'Save Changes' button into the sidebar (like the Admin Area has)

-Miscellaneous user experience improvements / optimizations / refactoring

-Increased reliability of CURL (in PHP) for API data requests

-Made API throttling more reliable

-Updated documentation

IMPORTANT *UPGRADE* NOTICES:

v6.00.38 and higher restructures CURRENCY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.39

-BUG FIX: Fixed CoinMarketCap.com support

-BUG FIX: Miscellaneous fixes

-Refactoring / optimization of ENTIRE markets API data parsing logic (for 'Add New Asset' feature, in admin 'Portfolio Assets' WEB INTERFACE)

-Added Admin Config settings for: Portfolio Assets (adding / removing assets and markets is FINALLY available in the interface now)

-Upgraded Jupiter Aggregator exchange API, including addition of market trade volume data

-Cleaned up stale DEMO markets / news feeds / text gateways

-Optimizations / polish on the Access Stats UX and logic

-Upgraded Idex exchange API to v4

-Upgraded Kraken exchange API

IMPORTANT *UPGRADE* NOTICES:

v6.00.38 and higher restructures CURRENCY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------








